syntax = "proto3";


service AuthService {
  rpc Login(LoginRequest) returns (AuthResponse);
  rpc SignUp(SignUpRequest) returns (AuthResponse);
}

message SignUpRequest {
  string username = 1;
  string password = 2;
  string email = 3;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message AuthResponse {
  string token = 1;
  string message = 2;
  bool success = 3;
}

